# bidai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: graph.py  nodes.py  prompts.py  state.py
config/: __init__.py  logging_config.py  settings.py
core/: __init__.py  exceptions.py  models.py
docs/phases/: roadmap.md  step-0.md  step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
ingestion/: chunker.py  indexer.py  pdf_loader.py
retrieval/: __init__.py  retriever.py  vector_store.py
scripts/: demo_check.py
services/: openai_client.py  rag_helpers.py  rag_service.py
tests/: fake_chat.py  fake_embeddings.py  test_chunker.py  test_graph.py  test_indexer.py  test_pdf_loader.py  test_phase7.py  test_rag_service.py  test_retriever.py  test_smoke.py  test_vector_store.py  test_workers.py
ui/: __init__.py  main_window.py  workers.py
ui/widgets/: __init__.py  chat_panel.py  file_picker.py  sources_panel.py
